adjust code style with rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,4 +9,7 @@ Metrics/BlockLength:
     - Rakefile
 
 Layout/EndOfLine:
-   Enabled: False
+  Enabled: False
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
